--- a/src/WirePeep/WirePeep.csproj
+++ b/src/WirePeep/WirePeep.csproj
@@ -2,9 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFrameworks>netcoreapp3.1;net45</TargetFrameworks>
+		<!-- TODO: Add net45 in later. [Bill, 5/7/2020] -->
+		<TargetFrameworks>netcoreapp3.1</TargetFrameworks>
 		<UseWPF>true</UseWPF>
-		<Description>Free, open-source Internet downtime monitor</Description>
+		<Description>Free, open-source network downtime monitor</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
