--- a/src/WirePeep.Common/WirePeep.Common.csproj
+++ b/src/WirePeep.Common/WirePeep.Common.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<Content Include="DefaultProfile.xml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Menees.Common" Version="4.9.6" />
 	</ItemGroup>
 
