--- a/src/WirePeep/WirePeep.csproj
+++ b/src/WirePeep/WirePeep.csproj
@@ -4,6 +4,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFrameworks>netcoreapp3.1;net45</TargetFrameworks>
 		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
 		<Description>Free, open-source network downtime monitor</Description>
 	</PropertyGroup>
 
