Adding some icon ideas

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+# Ignore large whiteboard images
+/src/WirePeep/Images/Whiteboard*.png
