Updated icon and readme for 1.0 release

--- a/.gitignore
+++ b/.gitignore
@@ -340,5 +340,5 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
-# Ignore large whiteboard images
-/src/WirePeep/Images/Whiteboard*.png
+# Ignore large whiteboard images and other trial items
+/src/WirePeep/Images/Scrap/*
