--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,10 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1      
-
+      uses: microsoft/setup-msbuild@v1
+      with:
+        vs-version: '[16.8,)' # C#9 is required
+    
     - name: Build everything
       run: |
         & .\eng\build.ps1 -build $true
