--- a/src/WirePeep.Common/WirePeep.Common.csproj
+++ b/src/WirePeep.Common/WirePeep.Common.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-		<TargetFrameworks>netcoreapp3.1;net45</TargetFrameworks>
     <RootNamespace>WirePeep</RootNamespace>
   </PropertyGroup>
 
@@ -10,7 +9,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Menees.Common" Version="4.9.10" />
+		<PackageReference Include="Menees.Common" Version="5.0.0" />
+		<PackageReference Include="Nullable" Version="1.3.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
