Update packages and apply WPF 6.0.2 workaround 7176

--- a/src/WirePeep/WirePeep.csproj
+++ b/src/WirePeep/WirePeep.csproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Menees.Windows.Presentation" Version="5.0.3" />
+		<PackageReference Include="Menees.Windows.Presentation" Version="5.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -31,4 +31,10 @@
 	  </EmbeddedResource>
 	</ItemGroup>
 
+	<!-- Workaround for WPF 6.0.2 SDK problem: https://github.com/dotnet/core/issues/7176 -->
+	<ItemGroup>
+		<FrameworkReference
+		Update="Microsoft.WindowsDesktop.App;Microsoft.WindowsDesktop.App.WPF;Microsoft.WindowsDesktop.App.WindowsForms"
+		TargetingPackVersion="6.0.0" />
+	</ItemGroup>
 </Project>
