Added ProductUrl. Removed WPF 6.0.2 SDK workaround.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -45,6 +45,7 @@
 
 	<ItemGroup>
 		<AssemblyMetadata Condition="'$(BuildTime)' != ''" Include="BuildTime" Value="$(BuildTime)" />
+		<AssemblyMetadata Include="ProductUrl" Value="$(PackageProjectUrl)" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(UseCustomCodeAnalyzers)">
