--- a/src/WirePeep/WirePeep.csproj
+++ b/src/WirePeep/WirePeep.csproj
@@ -6,6 +6,7 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<Description>Free, open-source network downtime monitor</Description>
 		<ApplicationIcon>Images\WirePeep.ico</ApplicationIcon>
+		<IsPublishable>true</IsPublishable>
 	</PropertyGroup>
 
 	<ItemGroup>
